--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -6,7 +6,13 @@
     <body style = "background: linear-gradient(#141e30, #eb7132);">
         <div class = "main-content">
             {{>header}}
-            {{message}}
+            <h2>{{message}}</h2> 
+            <br>
+            <p>{{description}}</p>
+            <ul>
+                <li><a href='https://github.com/erezasmara/TOXIC_NB_APIS' style="color: black;">Toxic Apis </a></li>
+                <li><a href='https://github.com/erezasmara/TOXIC_NB_UI' style="color: black;">Toxic UI</a></li>
+            </ul>
         </div>
         
         {{>footer}}
