--- a/public/css/form.css
+++ b/public/css/form.css
@@ -56,7 +56,7 @@
   }
   
 
-  button{
+  #form_btm{
     position: relative;
     display: inline-block;
     padding: 10px 20px;
@@ -68,5 +68,6 @@
     margin-top: 40px;
     letter-spacing: 4px;
     box-shadow: 5px 10px;
+    left: 35%;
   }
 
