--- a/public/css/popup.css
+++ b/public/css/popup.css
@@ -15,25 +15,38 @@
   .popup .popuptext {
     visibility: hidden;
     width: auto;
-    background-color: #555;
+    background-color: rgba(44, 121, 221, 0.3);
     color: #fff;
     text-align: center;
     border-radius: 15px;
     padding: 15px;
     position: relative;
     z-index: 1;
-    
   }
+  #popup-arrow{
+    border-top: #6ae9ff85;
+    border-bottom:   transparent; 
+    border-left:  transparent;
+    border-right:  transparent;
+    border-style: solid;
+    border-width: 10px;
+    float: left;
+    top: 100%;
+    left: 10%;
+    position: absolute;
+
+}
   
   /* Popup arrow */
-  .popup .popuptext::after {
+  /* .popup .popuptext::after {
     content: "";
     position: absolute;
     top: 100%;
     border-width: 10px;
     border-style: solid;
-    border-color: #00000080 transparent transparent transparent;
-  }
+    border-color: #f8e4e44f transparent transparent transparent;
+    left: 10%;
+  } */
   
   /* Toggle this class - hide and show the popup */
   .popup .show {
