sent ping tp ml server

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -5,6 +5,7 @@
 <head>
 
 <link rel="stylesheet" href="/css/nav.css">
+<script src="/js/ping.js"></script>
 
 </head>
 <body class="background-one">
