html changes & responsive for mobile

--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/form.css">
-    <link rel="stylesheet" href="/css/loader.css">
-    <link rel="stylesheet" href="/css/popup.css">
-
+        <link rel='icon' href='/img/neural_logo.png'>
+        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/form.css">
+        <link rel="stylesheet" href="/css/loader.css">
+        <link rel="stylesheet" href="/css/popup.css">
+        <meta name="viewport" content="width=device-width, initial-scale=0.9">
     </head>
     <body style = "background: linear-gradient(#141e30, #53d9d1);">
 
