--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <link rel="stylesheet" href="/css/style.css">
+        <link rel='icon' href='/img/neural_logo.png'>
+        <meta name="viewport" content="width=device-width, initial-scale=0.9">
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body style = "background: linear-gradient(#141e30, #eb7132);">
         <div class = "main-content">
